Koblet css og html sammen

--- a/skribl.html
+++ b/skribl.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startit</title>
- <style>   p {color: blue;
-    text-align: center;
+    <link rel="stylesheet" type="text/css" href="skribl.css">
     
-    }
-    .center{
-        text-align: center;
-        color: brown;
-        
-    }</style>   
- 
+
 </head>
 <body>
+  
     <h1>HEi hallo osv</h1>
     Tekst tekst tekst osv
     <h2>skravl</h2>
