løst rammer, border-style er viktig

--- a/skribl.html
+++ b/skribl.html
@@ -6,21 +6,21 @@
     <title>Startit</title>
     <link rel="stylesheet" type="text/css" href="skribl.css">
     
-
+    
 </head>
 <body>
   
     <h1>HEi hallo osv</h1>
     Tekst tekst tekst osv
-    <h2>skravl</h2>
+    <h2 class="overskrift">skravl</h2>
     Skravleskje ekkelt grusom motbakke
     <h3>tjohei og godnatt</h3>
     <p>det er slutt</p>
     <a href="https://www.vg.no">Verdens gnag</a>
     <button>Steike, lureri</button>
-    <h4 class="center">Her kommer det en liste</h4>
-    <ul class="center">
-        <li ting 1</li>
+    <h4 >Her kommer det en liste</h4>
+    <ul>
+        <li>ting 1</li>
         <li>ting 2</li>
         <li>ting3</li>
     </ul>
