skribl for å lære

--- a/skribl.html
+++ b/skribl.html
@@ -24,6 +24,7 @@
         <li>ting 2</li>
         <li>ting3</li>
     </ul>
+    <div>syre</div><br>
     <p>Her skal du få se<br>tulla</p>
     <b>heheh, feit tekst</b>
     <strong>hjelp</strong>
