--- a/SVG.html
+++ b/SVG.html
@@ -11,5 +11,9 @@
         <circle cx="50" cy="50" r="40" stroke="green"
         stroke-width ="4" fill="yellow" /> 
     </svg>
+    <svg width="400" height="110">
+        <rect width="300" height="100"
+        style="fill:rgb(0, 0, 255);stroke-width:3;stroke:rgb(0,0,0)"" /> 
+    </svg>
 </body>
 </html>
