--- a/SVG.html
+++ b/SVG.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Dette er en SVG</h1>
+    <h1>Her er det flere SVGer</h1>
     <svg width="100" height="100">
         <circle cx="50" cy="50" r="40" stroke="green"
         stroke-width ="4" fill="yellow" /> 
