--- a/SVG.html
+++ b/SVG.html
@@ -15,5 +15,9 @@
         <rect width="300" height="100"
         style="fill:rgb(0, 0, 255);stroke-width:3;stroke:rgb(0,0,0)"" /> 
     </svg>
+    <svg width="400" height="170">
+        <rect x="50" y="20" width="160" height="160"
+        style="fill:rgb(0, 174, 255);stroke-width:3;stroke:rgb(0,0,0)"" /> 
+    </svg>
 </body>
 </html>
