--- a/Snomannen.html
+++ b/Snomannen.html
@@ -27,6 +27,9 @@
         ellipse.munn{
             fill: black;
         }
+        circle.knapp{
+            fill:black
+        }
         
     </style>
 </head>
@@ -37,6 +40,10 @@
         <circle class="hode" cx="50" cy="33" r="16"></circle>
         <circle class="øye" cx="43" cy="30" r="2"></circle>
         <circle class="øye" cx="57" cy="30" r="2"></circle>
+        <circle class="knapp" cx="50" cy="56" r="1"></circle>
+        <circle class="knapp" cx="50" cy="66" r="1"></circle>
+        <circle class="knapp" cx="50" cy="76" r="1"></circle>
+        <circle class="knapp" cx="50" cy="86" r="1"></circle>
         <ellipse class="munn" cx="50" cy="43" rx="4" ry="2"></ellipse>
         
     </svg>
