--- a/snomann/Snomannen.html
+++ b/snomann/Snomannen.html
@@ -4,34 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        rect.ramme{
-            stroke: black;
-            stroke-width: 2px;
-            fill: rgb(235, 185, 123);
-        }
-        circle.kropp{
-            stroke: black;
-            stroke-width: 0,3px;
-            fill: whitesmoke;
-        }
-        circle.hode {
-            stroke: black;
-            stroke-width: 0,3px;
-            fill: whitesmoke;
-        }
-        circle.øye{
-            
-            fill: black;
-        }
-        ellipse.munn{
-            fill: black;
-        }
-        circle.knapp{
-            fill:black
-        }
-        
-    </style>
+    <link rel="stylesheet" href="snomann.css">
 </head>
 <body>
     <svg width="600" height="600" viewbox="0 0 100 100">
