--- a/snomann/Snomannen.html
+++ b/snomann/Snomannen.html
@@ -18,7 +18,7 @@
         <circle class="knapp" cx="50" cy="76" r="1"></circle>
         <circle class="knapp" cx="50" cy="86" r="1"></circle>
         <ellipse class="munn" cx="50" cy="43" rx="4" ry="2"></ellipse>
-        
+        <polygon class="gulrot" points="50,34 35,44 55,38"></polygon> 
     </svg>
 </body>
 </html>
