--- a/snomann/Snomannen.html
+++ b/snomann/Snomannen.html
@@ -20,6 +20,7 @@
         <ellipse class="munn" cx="50" cy="43" rx="4" ry="2"></ellipse>
         <polygon class="gulrot" points="50,34 35,44 55,38"></polygon>
         <path class="hatt" d="M50 2 L62 20 L38 20 Z" ></path>
+        <line class="kosteskaft" x1="70" y1="94" x2="38" y2="48"></line>
     </svg>
 </body>
 </html>
