--- a/JavaScript/Quiz.html
+++ b/JavaScript/Quiz.html
@@ -6,7 +6,7 @@
     <title>Quiz</title>
 </head>
 <body>
-    <p>Hva er 3+5?</p>
+    <p id="hjelp">Hva er 3+5?</p>
     <button onclick='Alt1()' id="Alt1">A) 6</button>
     <button onclick='Alt2()' id="Alt2">B) 7</button>
     <button onclick='Alt3()' id="Alt3">C) 8</button>
@@ -15,14 +15,15 @@
     <script>
         
         function Alt1(){
-        document.getElementById('Alt1').innerHTML='feil'
+        
+        document.getElementById('hjelp').innerHTML='feil'
     }
 
          function Alt3(){
-        document.getElementById('Alt3').innerHTML= 'riktig'
+        document.getElementById('hjelp').innerHTML= 'riktig'
     }
         function Alt2(){
-        document.getElementById('Alt2').innerHTML= 'feil'
+        document.getElementById('hjelp').innerHTML= 'feil'
     }
     </script>
 </body>
