--- a/JavaScript/puslespill/Puslespill.html
+++ b/JavaScript/puslespill/Puslespill.html
@@ -4,20 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puslespill</title>
-    <style>
-        div.container{
-            font-size: 0px;
-        }
-
-       
-
-        img {
-
-            float: left;
-            clear: both;
-            font-size: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="puzzle.css"/>
 
 </head>
 <body> 
@@ -44,8 +31,7 @@
 
 
        function reset() {
-           document.getElementById('container').innerHTML = ' ';
-       } 
+         location.reload() } 
 
         
 
