--- a/JavaScript/f5.html
+++ b/JavaScript/f5.html
@@ -19,7 +19,7 @@
         function trykkert(press){
            var d= new Date();
            var n= d.toTimeString();
-           document.getElementById('loggert').innerHTML +=n;
+           document.getElementById('loggert').innerHTML +=d+n;
            
         }
         
