--- a/JavaScript/WordChoice/WCindex.html
+++ b/JavaScript/WordChoice/WCindex.html
@@ -7,17 +7,17 @@
     <style>
         div.setning {
     font-size: 16px;
-    display:inline-block;
+    
 }
-div.choice{
+        div.choice{
     font-size: 16px;
 }
     </style>
 </head>
 <body>
-    <div class="setning">
-    <div style="font-size: large;" >Hjelp meg med <div id="valg1">____</div> det er en <div id='valg2'>_____</div> i hagen, det er i grunn <div id="valg3">____</div>.  </div>
-    </div>
+    <p class="setning" style="padding:0px;width:100px; display: span;">
+    <div>Hjelp meg med <div id="valg1">____</div> det er en <div id='valg2'>_____</div> i hagen, det er i grunn <div id="valg3">____</div>.  </div>
+    </p>
     <br/>
 <div id="alt1" class="choice" onclick="trykk1(this)">gjødsel</div>
 <div id="alt2" class="choice" onclick="trykk2(this)">sparkel</div>
