Ayy lmao masspush

--- a/JavaScript/WordChoice/WCindex.html
+++ b/JavaScript/WordChoice/WCindex.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div.setning {
+        .setning {
     font-size: 16px;
     
 }
@@ -15,8 +15,8 @@
     </style>
 </head>
 <body>
-    <p class="setning" style="padding:0px;width:100px; display: span;">
-    <div>Hjelp meg med <div id="valg1">____</div> det er en <div id='valg2'>_____</div> i hagen, det er i grunn <div id="valg3">____</div>.  </div>
+    
+    <div class="setning">Hjelp meg med <span id="valg1">____</span> det er en <span id='valg2'>_____</span> i hagen, det er i grunn <span id="valg3">____</span>.  </div>
     </p>
     <br/>
 <div id="alt1" class="choice" onclick="trykk1(this)">gjødsel</div>
