--- a/JavaScript/kodelaas/kodelås.html
+++ b/JavaScript/kodelaas/kodelås.html
@@ -48,7 +48,7 @@
         document.getElementById("resultat").innerText = "document.getFucked.innerHTML";
     }
       if (correctCode==enteredSoFar){
-        document.getElementById('resultat').innerText= "hei og hopp"
+        document.getElementById('resultat').innerText= "Åpen!"
       }
   }
 </script>
