--- a/JavaScript/Qunit - unittests/Tekstformatting/Test.html
+++ b/JavaScript/Qunit - unittests/Tekstformatting/Test.html
@@ -12,11 +12,11 @@
     <script src="https://code.jquery.com/qunit/qunit-2.9.2.js"></script>
     <script src="lib.js"></script>
     <script>
-        QUnit.test("fix - 'terje'", fixText (tekst)); {
+        QUnit.test("fix - 'terje'", function (assert) {
             const actual = fixText('terje');
             const expected = 'Terje';
             assert.equal(actual, expected);
-        };
+        });
 
         QUnit.test("fix - 'terje '", function (assert) {
             const actual = fixText('terje ');
