--- a/JavaScript/Qunit - unittests/gjenkjenne epost/test.html
+++ b/JavaScript/Qunit - unittests/gjenkjenne epost/test.html
@@ -28,8 +28,8 @@
             assert.equal(actual, expected);
         });
 
-        QUnit.test("Contains dots and spaces ", function (assert) {
-            const actual = isEmail('sperm hval.@gmail.com');
+        QUnit.test("Contains dots  ", function (assert) {
+            const actual = isEmail('spermhval.@gmail.com');
             const expected = true;
             assert.equal(actual, expected);
         });
