--- a/JavaScript/PO/JSON.html
+++ b/JavaScript/PO/JSON.html
@@ -4,31 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  </head>
 <body>
-    <h2>Make a table based on JSON data.</h2>
+    <button onclick="hentData()"> Hent vits</button>
 
-<p id="demo"></p>
+    <div id="vits"></div>
+
+
 
 <script>
-var obj, dbParam, xmlhttp, myObj, x, txt = "";
-obj = { table: "customers", limit: 20 };
-dbParam = JSON.stringify(obj);
-xmlhttp = new XMLHttpRequest();
-xmlhttp.onreadystatechange = function() {
-  if (this.readyState == 4 && this.status == 200) {
-    myObj = JSON.parse(this.responseText);
-    txt += "<table border='1'>"
-    for (x in myObj) {
-      txt += "<tr><td>" + myObj[x].name + "</td></tr>";
-    }
-    txt += "</table>"    
-    document.getElementById("demo").innerHTML = txt;
-  }
-};
-xmlhttp.open("POST", "json_demo_html_table.php", true);
-xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-xmlhttp.send("x=" + dbParam);
+ let vitsDiv = document.getElementById("vits");
+
+
+ async function hentData(){
+  // let counter = 0;
+  // counter++;
+  // if (counter > 10){
+  //   break;
+  // }  
+  // else{ 
+  
+  let resultat = await axios.get('https://api.chucknorris.io/jokes/random') 
+
+    let vits = resultat.data;
+
+    vitsDiv.innerHTML += vits.value + '<br>';
+ }
+
 </script>
 </body>
 </html>
