--- a/JavaScript/PO/SignaturePad.html
+++ b/JavaScript/PO/SignaturePad.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
 
   <body>
@@ -17,12 +17,12 @@
       ></canvas>
     </div>
 
-    <button id="save-png">Save as PNG</button>
+    <button id="save-png" onclick="getTimeAndIp()">Save as PNG</button>
     <button id="save-jpeg">Save as JPEG</button>
     <button id="save-svg">Save as SVG</button>
     <button id="clear">Clear</button>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
     <script src="SignaturePadJS.js"></script>
-</body>
+  </body>
 </html>
