--- a/JavaScript/PO/JSON.html
+++ b/JavaScript/PO/JSON.html
@@ -31,7 +31,7 @@
 
         let vits = resultat.data;
 
-        vitsDiv.innerHTML += vits.value + "<br>";
+        vitsDiv.innerHTML += vits.value += content.innerHTML + "<br>";
       }
     </script>
   </body>
