--- a/JavaScript/PO/SignaturePad.html
+++ b/JavaScript/PO/SignaturePad.html
@@ -18,8 +18,8 @@
     </div>
 
     <button id="save-png" onclick="getTimeAndIp()">Save as PNG</button>
-    <button id="save-jpeg">Save as JPEG</button>
-    <button id="save-svg">Save as SVG</button>
+    <!-- <button id="save-jpeg">Save as JPEG</button>
+    <button id="save-svg">Save as SVG</button> -->
     <button id="clear">Clear</button>
 
     <script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
