--- a/JavaScript/PO/primtall.html
+++ b/JavaScript/PO/primtall.html
@@ -10,7 +10,8 @@
     <div id="listeMedTall"></div>
 
     <script>
-      var primtall = [2], erPrimtall;
+      var primtall = [2],
+        erPrimtall;
 
       for (var i = 3; i <= 100; i += 2) {
         erPrimtall = true;
